--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             placeholder="Descripción"
           />
           <input
-            class="input js_in_search_race"
+            class="input"
             type="select"
             name="raza"
             placeholder="Raza"
